# srt_library

./: .gitignore  CLAUDE.md  README.md  benchmark_results.txt  benchmark_rnn.py  generate_tree.py  output_t5.txt  phase_state_benchmarks.py  phase_state_benchmarks2.py  phase_state_vibes_compiler.py  tree.md
_exact/: CLAUDE.md  README.md  REFACTORING_PLAN.md  compile_exact_kernels.sh  generate_api_index.py  test_all_kernels.py  tree.md
_exact/core/: __init__.py  constants.py  device.py  dtype.py  state.py  types.py
_exact/debug/: debug_cuda.py  debug_softmax.py  debug_test_env.py
_exact/docs/: README.md  exact_arithmetic_api.md
_exact/experiments/: tree.md  (+2 more)
_float/: CLAUDE.md  README.md  compile_kernels.py
_float/rust/: Cargo.toml  build.rs
_float/rust/kernels/: dhsr.cu  trilinear.cu
_float/rust/src/: golden_gelu.rs  hierarchy.rs  lib.rs  math_utils.rs
_float/rust/src/autograd/: backward.rs
_float/rust/src/exact/: constants.rs  fixed.rs  golden.rs  mod.rs  rational.rs  rotator.rs  symexpr.rs  traits.rs
_float/rust/src/resonant/: evolver.rs  syntonic_softmax.rs
_float/rust/src/tensor/: mod.rs  py_srt_cuda_ops.rs  storage.rs
_float/rust/src/tensor/cuda/: memory_pool.rs
core/: __init__.py  backend.py  constants.py  device.py  distributed.py  domains.py  dtype.py  exact.py  fft.py  golden.py  hypercomplex.py  jit.py  linalg.py  server.py  sn.py  srt_math.py  srt_random.py  state.py  types.py
theory_unique_components/: __init__.py  embeddings.py  prime_syntony_gate.py  syntonic_attention.py  syntonic_cnn.py  syntonic_mlp.py  syntonic_transformer.py
(+297 files in other folders)
